--- a/app/src/main/res/layout/activity_framelayout.xml
+++ b/app/src/main/res/layout/activity_framelayout.xml
@@ -19,5 +19,11 @@
         android:textStyle="bold"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:id="@+id/btnBrowser"
+        android:text="open Browser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 
 </FrameLayout>
