--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorBlackDark">#2e0a16</color>
+    <color name="colorGrey">#5d4e53</color>
     <color name="colorWhite">#f6f1f2</color>
 </resources>
